       and made smaller to faster change from 0 to 255 alpha.
       Also hotkeys are added for fast switching between 0-127-255 alpha
       values: cursor up = 0alpha, cursor down = 255alpha, 
       cursor left/right = 127alpha.
       See issue #299 for details. (Stefan)
- CHG: Moving the sliders in TortoiseIDiff moves the image right away, 
       without waiting for the mouse-up event.
       See issue #301 for details. (Stefan)

Version 1.4.2
- BUG: Checking out from the repository browser would default to HEAD
       instead of the revision shown in the repository browser.
       See issue #290 for details. (Stefan)

Version 1.4.1
- NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
- NEW: TortoiseProc passes the parameter "/line:XXXX" to TortoiseBlame
       to improve issue #214. (Stefan)
- CHG: If a bug ID is specified multiple times in a log message, the log
       dialog now shows each ID only once in the bug ID column. (Stefan)
- CHG: The bug ID column in the log dialog is now shown if the
       bugtraq:url is empty but the bugtraq:logregex is set. (Stefan)
- CHG: When ignoring file(s) failed, the error message from Subversion is
       shown in full instead of just the simple message telling that it
       failed. (Stefan)
- CHG: The root directory in the CSVNStatusListCtrl is shown as "." instead
       of an empty string. (Kazutoshi Satoda)
- BUG: When the bugtraq:message was set to "%BUGID%" only and the 
       bugtraq:number was set to "true", the log message from the
       'recent log messages' was inserted into the bug ID field instead of
       the log message field in the commit dialog. (Stefan)
- BUG: When saving a property over an existing and in-use file an exception
       was thrown. (Stefan)
- BUG: When columns were hidden in the various dialogs using the status
       control, the redrawing on the right end was sometimes wrong.
       See issue #293 for details. (Stefan)